# prettymux

./: SCREENCAST_NOTES.md
.github/workflows/: release.yml
.smithers/: .gitignore  agents.ts
.smithers/components/: ValidationLoop.tsx
.smithers/prompts/: review.mdx
.smithers/tickets/: prettymux-review-recovery.md  prettymux-strip-layout-plan.md
.smithers/workflows/: implement.tsx  kanban.tsx  prettymux-review-recovery.tsx  prettymux-strip-layout.tsx
packaging/: AppImageBuilder.yml  PKGBUILD  nfpm.yaml  prettymux.rc
packaging/containers/: debian-bookworm.Dockerfile  run-prettymux-docker.sh  verify-strip-layout.sh
packaging/debian/: changelog
snap/: snapcraft.yaml
src/gtk/: app_actions.c  app_actions.h  app_settings.c  app_settings.h  app_state.c  app_state.h  ghostty_actions.c  ghostty_terminal.c  ghostty_terminal.h  main.c  meson.build  notifications.c  notifications.h  pane_move_overlay.c  pane_move_overlay.h  prettymux-open.c  prettymux-shell-integration.sh  prettymux_agent_cli.c  session.c  session.h  settings_dialog.c  shortcuts.c  sidebar_data.c  sidebar_data.h  sidebar_sections.c  sidebar_sections.h  sidebar_ui.c  sidebar_ui.h  socket_commands.c  socket_server.c  socket_server.h  socket_server_stub.c  test_app_settings_layout_mode.c  test_app_state_instance.c  test_prettymux_agent_cli_instance.c  test_prettymux_open_instance.c  test_session_strip_persistence.c  test_sidebar_data.c  test_sidebar_ui_sections.c  test_socket_commands_status.c  (+11 more)
